fix align

--- a/public/index.css
+++ b/public/index.css
@@ -764,6 +764,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-right {
   text-align: right;
 }
+.align-top {
+  vertical-align: top;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
